--- a/src/sections/organisms/homepage-hero.liquid
+++ b/src/sections/organisms/homepage-hero.liquid
@@ -1,5 +1,5 @@
 {% capture _hero_content %}
-  {% include 'heading', _text: 'Buy Now!' %}
+  {% include 'header', _text: 'Buy Now!' %}
   {% include 'text' with "...before it's too late" %}
   {% include 'button', _content: 'Add to Cart' %}
 {% endcapture %}
