--- a/src/sections/static/index-hero.liquid
+++ b/src/sections/static/index-hero.liquid
@@ -7,7 +7,7 @@
     {%- endcapture -%}
     {%- capture _hero_content -%}
       <div class="oo-inside-hero">
-        {%- include 'heading',
+        {%- include 'header',
           title: block.settings.title,
           level: 3,
           content: _heading_content -%}
