--- a/src/snippets/core/atoms/list.liquid
+++ b/src/snippets/core/atoms/list.liquid
@@ -1,7 +1,7 @@
 {%- capture _arguments -%}
   {%- include 'argument',
-    _value: list,
-    _name: 'list',
+    _value: content,
+    _name: 'content',
     _required: true -%}
 {%- endcapture -%}
 
