--- a/src/snippets/core/molecules/line-item.liquid
+++ b/src/snippets/core/molecules/line-item.liquid
@@ -25,7 +25,7 @@
 
     <div class="oo-line-item--information-wrapper">
 
-      {%- include 'heading',
+      {%- include 'header',
         title: _line_item.product.title,
         level: 4,
         classes: 'inside-oo-line-item--information-wrapper',
