--- a/src/snippets/core/molecules/social-media-icons.liquid
+++ b/src/snippets/core/molecules/social-media-icons.liquid
@@ -39,10 +39,10 @@
       {%- endcapture -%}
 
       {%- include type,
-        _content: _icon,
-        _href: _href,
-        _classes: '',
-        _extra_attrs: _network_attr %}
+        content: _icon,
+        href: _href,
+        classes: '',
+        extra_attrs: _network_attr %}
 
       {%- assign _href = nil -%}
       {%- assign _icon = nil -%}
