--- a/src/sections/containers/product.liquid
+++ b/src/sections/containers/product.liquid
@@ -17,7 +17,7 @@
   </div>
 
   <div class="product-information">
-    {% include 'heading',
+    {% include 'header',
       title: product.title,
       level: 2 %}
 
